--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Pokedex</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="/assets/css/styleGlobal.css">
+   <link rel="stylesheet" href="/assets/css/pokedex.css">
+   <link rel="stylesheet" href="/assets/css/colors.css">
+   
+   <title>Pokédex</title>
 </head>
 <body>
-   <h1>clea
-   </h1>
+   <section id="container-pokedex">
+      <h1>Pokédex</h1>
+      <ol id="pokemons">
+         <!-- Aqui vai os pokémons -->
+      </ol>
+      <div class="pagination">
+         <button class="clickable" id="loadMoreButton" type="button">
+             Load
+         </button>
+     </div>
+   </section>
+   <script src="/assets/js/pokemonModel.js"></script>
+   <script src="/assets/js/pokemonApi.js"></script>
+   <script src="/assets/js/main.js"></script>
 </body>
 </html>
